heading wrapping fix

--- a/website/css/stylesheet.css
+++ b/website/css/stylesheet.css
@@ -273,9 +273,6 @@ h3.menu-item-title {
 
 /*small*/
 @media (max-width: 767px) {
-    .navbar-brand h1{
-        font-size: 5vw;
-    }
     .fa{
         font-size: 1.5em;
         margin-right: 10px;
